@@ -3,6 +3,7 @@ v0.1.0
 * this works off the new pyramid_debutoolbar>=4.0 api.  no longer a dirty hack!
 * please use `debugtoolbar.includes`
 * changed the url for queries
+* renamed to pyramid_debugtoolbar_api_sqlalchemy
 
 v0.0.2
 2014.12.16
